1.增加调用apiServer的Client 2.熔断保护时间设置为3s

--- a/app/src/main/resources/application-prod.properties
+++ b/app/src/main/resources/application-prod.properties
@@ -6,6 +6,7 @@ server.connection-timeout=3000
 server.tomcat.uri-encoding=UTF-8
 logging.file=/httx/app/app.log
 logging.level.tk.mybatis=TRACE
+#数据源
 druid.url=jdbc:mysql://116.62.160.143:3306/annotation?useUnicode=true&characterEncoding=utf8
 druid.driver-class=com.mysql.jdbc.Driver
 druid.username=annotation
@@ -14,22 +15,28 @@ druid.initial-size=1
 druid.min-idle=1
 druid.max-active=20
 druid.test-on-borrow=true
+#spring
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.ftl
 spring.freemarker.cache=false
 spring.freemarker.request-context-attribute=request
+#sql映射
 mybatis.type-aliases-package=cn.malgo.annotation.common.dal.model
 mybatis.mapper-locations=classpath:mapper/*.xml
 mapper.mappers=cn.malgo.annotation.common.dal.util.CommonMapper
 mapper.not-empty=false
 mapper.identity=MYSQL
+#分页插件
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
+#熔断保护
 feign.hystrix.enabled=true
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=3000
+
 #定时任务服务器IP地址
 spring.task.server.host=1.1.1.1
 #核心线程数
@@ -40,3 +47,6 @@ spring.task.pool.maxPoolSize=120
 spring.task.pool.keepAliveSeconds=60
 #队列容量
 spring.task.pool.queueCapacity=15
+
+#apiServer
+prc.server.api.url=http://118.31.10.105:8099
