--- a/app/src/main/resources/application-dev.properties
+++ b/app/src/main/resources/application-dev.properties
@@ -49,4 +49,4 @@ spring.task.pool.keepAliveSeconds=60
 spring.task.pool.queueCapacity=15
 
 #apiServer
-prc.server.api.url=http://localhost:8099
+prc.server.api.url=http://118.31.10.105:8099
