--- a/app/src/main/resources/application-dev.properties
+++ b/app/src/main/resources/application-dev.properties
@@ -18,8 +18,8 @@ druid.test-on-borrow=true
 #spring
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-spring.mvc.view.prefix=/templates/
-spring.mvc.view.suffix=.ftl
+#spring.mvc.view.prefix=/templates/
+#spring.mvc.view.suffix=.ftl
 spring.freemarker.cache=false
 spring.freemarker.request-context-attribute=request
 #sql映射
@@ -50,3 +50,4 @@ spring.task.pool.queueCapacity=15
 
 #apiServer
 prc.server.api.url=http://118.31.10.105:8099
+#prc.server.api.url=http://localhost:8099
