1.增加添加标注接口,允许指定新词 2.增加删除标注接口,允许同时删除新词 3.列表接口返回数据中,增加新词列表

--- a/app/src/main/resources/application-dev.properties
+++ b/app/src/main/resources/application-dev.properties
@@ -18,8 +18,8 @@ druid.test-on-borrow=true
 #spring
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-#spring.mvc.view.prefix=/templates/
-#spring.mvc.view.suffix=.ftl
+spring.mvc.view.prefix=/templates/
+spring.mvc.view.suffix=.ftl
 spring.freemarker.cache=false
 spring.freemarker.request-context-attribute=request
 #sql映射
