1.删除easyui框架,改为vue 2.修改配置文件中的freemarker配置

--- a/app/src/main/resources/application-dev.properties
+++ b/app/src/main/resources/application-dev.properties
@@ -18,10 +18,11 @@ druid.test-on-borrow=true
 #spring
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-spring.mvc.view.prefix=/templates/
-spring.mvc.view.suffix=.ftl
-spring.freemarker.cache=false
-spring.freemarker.request-context-attribute=request
+#spring mvc freemarker
+#spring.mvc.view.prefix=/templates/
+#spring.mvc.view.suffix=.ftl
+#spring.freemarker.cache=false
+#spring.freemarker.request-context-attribute=request
 #sql映射
 mybatis.type-aliases-package=cn.malgo.annotation.common.dal.model
 mybatis.mapper-locations=classpath:mapper/*.xml
