--- a/app/src/main/resources/application-test.properties
+++ b/app/src/main/resources/application-test.properties
@@ -7,9 +7,9 @@ server.tomcat.uri-encoding=UTF-8
 logging.file=/httx/app/app.log
 logging.level.tk.mybatis=TRACE
 #数据源
-druid.url=jdbc:mysql://116.62.160.143:3306/annotation?useUnicode=true&characterEncoding=utf8
+druid.url=jdbc:mysql://172.16.75.37:3306/annotation_test?useUnicode=true&characterEncoding=utf8
 druid.driver-class=com.mysql.jdbc.Driver
-druid.username=annotation
+druid.username=annotation_test
 druid.password=annotation
 druid.initial-size=1
 druid.min-idle=1
@@ -50,4 +50,4 @@ spring.task.pool.keepAliveSeconds=60
 spring.task.pool.queueCapacity=15
 
 #apiServer
-prc.server.api.url=http://118.31.10.105:8099
+prc.server.api.url=http://172.16.209.197:8099
