--- a/app/src/main/resources/application-dev.properties
+++ b/app/src/main/resources/application-dev.properties
@@ -7,9 +7,9 @@ server.tomcat.uri-encoding=UTF-8
 logging.file=/httx/app/app.log
 logging.level.tk.mybatis=TRACE
 #数据源
-druid.url=jdbc:mysql://116.62.160.143:3306/annotation?useUnicode=true&characterEncoding=utf8
+druid.url=jdbc:mysql://116.62.160.143:3306/annotation_test?useUnicode=true&characterEncoding=utf8
 druid.driver-class=com.mysql.jdbc.Driver
-druid.username=annotation
+druid.username=annotation_test
 druid.password=annotation
 druid.initial-size=1
 druid.min-idle=1
