--- a/app/src/main/resources/application-dev.properties
+++ b/app/src/main/resources/application-dev.properties
@@ -49,6 +49,6 @@ spring.task.pool.keepAliveSeconds=60
 #队列容量
 spring.task.pool.queueCapacity=15
 
-#apiServer
+#apiServer springCloud fegin接口的baseUrl
 prc.server.api.url=http://118.31.10.105:8099
 #prc.server.api.url=http://localhost:8099
