--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.malgo.annotation</groupId>
-    <artifactId>malgo</artifactId>
+    <artifactId>server</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
@@ -16,15 +16,15 @@
     </parent>
 
     <distributionManagement>
-        <repository>
+        <!-- <repository>
             <id>nexus-releases</id>
             <name>Nexus Release Repository</name>
             <url>http://116.62.160.143:8081/nexus/content/repositories/releases/</url>
-        </repository>
+        </repository> -->
         <snapshotRepository>
-            <id>nexus-snapshots</id>
+            <id>annotation-snapshots</id>
             <name>Nexus Snapshot Repository</name>
-            <url>http://116.62.160.143:8081/nexus/content/repositories/snapshots/</url>
+            <url>http://116.62.160.143:8081/nexus/content/repositories/algorithm/</url>
         </snapshotRepository>
     </distributionManagement>
 
@@ -39,7 +39,7 @@
             </snapshots>
         </repository>
         <repository>
-            <id>local-nexus</id>
+            <id>public</id>
             <url>http://116.62.160.143:8081/nexus/content/groups/public/</url>
             <releases>
                 <enabled>true</enabled>
