--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.malgo.annotation</groupId>
-    <artifactId>server</artifactId>
+    <artifactId>malgo</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
@@ -41,6 +41,17 @@
         <repository>
             <id>public</id>
             <url>http://116.62.160.143:8081/nexus/content/groups/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>annotation-snapshots</id>
+            <url>http://116.62.160.143:8081/nexus/content/repositories/annotation/</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
