调整java代码部分涉及到表名和对应的字段统一设置为小写

--- a/app/src/main/resources/application-dev.properties
+++ b/app/src/main/resources/application-dev.properties
@@ -7,10 +7,13 @@ server.tomcat.uri-encoding=UTF-8
 logging.file=/httx/app/app.log
 logging.level.tk.mybatis=TRACE
 #数据源
-druid.url=jdbc:mysql://116.62.160.143:3306/annotation_test?useUnicode=true&characterEncoding=utf8
+#druid.url=jdbc:mysql://116.62.160.143:3306/annotation_test?useUnicode=true&characterEncoding=utf8
+druid.url=jdbc:mysql://localhost:3306/annotation_dev?useUnicode=true&characterEncoding=utf8
 druid.driver-class=com.mysql.jdbc.Driver
-druid.username=annotation_test
-druid.password=2lOROrFdt96aSzNt
+#druid.username=annotation_test
+#druid.password=2lOROrFdt96aSzNt
+druid.username=root
+druid.password=cjl0162Mysql@
 druid.initial-size=1
 druid.min-idle=1
 druid.max-active=20
