--- a/common/pom.xml
+++ b/common/pom.xml
@@ -182,7 +182,12 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.14</version>
         </dependency>
-
+        <!--生成token-->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
 
 
     </dependencies>
@@ -213,6 +218,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
