--- a/app/src/main/resources/application-prod.properties
+++ b/app/src/main/resources/application-prod.properties
@@ -7,10 +7,12 @@ server.tomcat.uri-encoding=UTF-8
 logging.file=/httx/app/app.log
 logging.level.tk.mybatis=TRACE
 #数据源
-druid.url=jdbc:mysql://172.16.75.37:3306/annotation?useUnicode=true&characterEncoding=utf8
+#druid.url=jdbc:mysql://172.16.75.37:3306/annotation?useUnicode=true&characterEncoding=utf8
+druid.url=jdbc:mysql://116.62.160.143:3306/annotation_test?useUnicode=true&characterEncoding=utf8
 druid.driver-class=com.mysql.jdbc.Driver
-druid.username=annotation
-druid.password=2y5zO037f8QLuVzD
+#druid.username=annotation
+#druid.password=2y5zO037f8QLuVzD
+
 druid.initial-size=1
 druid.min-idle=1
 druid.max-active=20
