--- a/annotation-config/pom.xml
+++ b/annotation-config/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.microservice</groupId>
-	<artifactId>configdata</artifactId>
+	<artifactId>annotation-config</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 
-	<name>configdata</name>
+	<name>annotation-config</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
