--- a/annotation-word-pos/pom.xml
+++ b/annotation-word-pos/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.microservice</groupId>
-	<artifactId>app</artifactId>
+	<artifactId>annotation-word-pos</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>app</name>
+	<name>annotation-word-pos</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
