--- a/annotation-word-pos/src/main/resources/application-dev.properties
+++ b/annotation-word-pos/src/main/resources/application-dev.properties
@@ -1,6 +1,5 @@
-spring.application.name=micro-annotation-service
+#spring.application.name=micro-annotation-service
 server.port=9000
-eureka.client.serviceUrl.defaultZone=http://localhost:8000/eureka/
 
 spring.datasource.annotation.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.annotation.jdbcUrl=jdbc:mysql://localhost:3306/annotation_dev?useUnicode=true&characterEncoding=utf8
