--- a/annotation-sentence/pom.xml
+++ b/annotation-sentence/pom.xml
@@ -80,21 +80,21 @@
 
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-            	<groupId>org.springframework.boot</groupId>
-            	<artifactId>spring-boot-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>repackage</goal><!--可以把依赖的包都打包到生成的Jar包中-->
-						</goals>
-					</execution>
-				</executions>
-            </plugin>
-        </plugins>
-        <finalName>annotationSentence</finalName>
-    </build>
+    <!--<build>-->
+        <!--<plugins>-->
+            <!--<plugin>-->
+            	<!--<groupId>org.springframework.boot</groupId>-->
+            	<!--<artifactId>spring-boot-maven-plugin</artifactId>-->
+				<!--<executions>-->
+					<!--<execution>-->
+						<!--<goals>-->
+							<!--<goal>repackage</goal>&lt;!&ndash;可以把依赖的包都打包到生成的Jar包中&ndash;&gt;-->
+						<!--</goals>-->
+					<!--</execution>-->
+				<!--</executions>-->
+            <!--</plugin>-->
+        <!--</plugins>-->
+        <!--<finalName>annotationSentence</finalName>-->
+    <!--</build>-->
 
 </project>
