--- a/annotation-word-pos/src/main/resources/application-dev.properties
+++ b/annotation-word-pos/src/main/resources/application-dev.properties
@@ -1,10 +1,16 @@
 #spring.application.name=micro-annotation-service
-server.port=9000
+server.port=9001
 
 spring.datasource.annotation.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.annotation.jdbcUrl=jdbc:mysql://localhost:3306/annotation_dev?useUnicode=true&characterEncoding=utf8
 spring.datasource.annotation.username=root
 spring.datasource.annotation.password=cjl0162Mysql@
 
-pro.serverApiUrl=http://118.31.10.105:8099
+pro.serverApiUrl=http://192.168.31.104:8099
 
+#熔断保护
+feign.hystrix.enabled=true
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=3000
+
+spring.jackson.time-zone=GMT+8
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
