后台解决打包问题，根目录下执行mvn clean package,可以同时将子模块也打成对应的jar包，以及打包的命名问题，

--- a/annotation-word-pos/pom.xml
+++ b/annotation-word-pos/pom.xml
@@ -96,7 +96,7 @@
 				</executions>
 			</plugin>
 		</plugins>
-		<finalName>annotation-word-pos</finalName>
+		<!--<finalName>annotation-word-pos</finalName>-->
 	</build>
 
 
