新增标签过滤掉交叉文本的标签

--- a/annotation-word-pos/src/main/resources/application-dev.properties
+++ b/annotation-word-pos/src/main/resources/application-dev.properties
@@ -6,8 +6,8 @@ spring.datasource.annotation.jdbcUrl=jdbc:mysql://localhost:3306/annotation_dev?
 spring.datasource.annotation.username=root
 spring.datasource.annotation.password=cjl0162Mysql@
 
-pro.serverApiUrl=http://192.168.31.104:8099
-
+#pro.serverApiUrl=http://192.168.31.104:8099
+pro.serverApiUrl=http://118.31.10.105:9003
 #熔断保护
 feign.hystrix.enabled=true
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=3000
