--- a/annotation-word-pos/src/main/resources/application-test.properties
+++ b/annotation-word-pos/src/main/resources/application-test.properties
@@ -6,8 +6,8 @@ spring.datasource.annotation.username=annotation_test
 spring.datasource.annotation.password=2lOROrFdt96aSzNt
 
 
-pro.serverApiUrl=http://192.168.31.104:8099
-
+#pro.serverApiUrl=http://192.168.31.104:8099
+pro.serverApiUrl=http://118.31.10.105:9003
 #熔断保护
 feign.hystrix.enabled=true
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=3000
