[feat]新增标注界面list列表查询，特定指派，批量指派，标注summary功能

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 		<module>zuul</module>
 		<module>annotation-negation</module>
 		<module>annotation-parallel</module>
+		<module>annotation-combine</module>
 	</modules>
 
 	<dependencies>
