--- a/annotation-combine/src/main/resources/application.properties
+++ b/annotation-combine/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9001
-#spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=true
 spring.datasource.url=jdbc:mysql://localhost:3306/annotation_dev?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=cjl0162Mysql@
@@ -8,3 +8,5 @@ spring.jpa.database=MYSQL
 # 显示后台处理的SQL语句
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jackson.time-zone=GMT+8
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
