--- a/annotation-combine/src/main/resources/application.properties
+++ b/annotation-combine/src/main/resources/application.properties
@@ -7,6 +7,13 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database=MYSQL
 # 显示后台处理的SQL语句
 spring.jpa.show-sql=true
+
+pro.serverApiUrl=http://118.31.10.105:9003
+#熔断保护
+feign.hystrix.enabled=true
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=3000
+
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
