--- a/annotation-combine/src/main/resources/application.properties
+++ b/annotation-combine/src/main/resources/application.properties
@@ -17,3 +17,8 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=3000
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
+logging.file=annotation-combine.log
+#logging.level.com.malgo.biz.brat.task.entities.AddAnnotationBiz=info
+#logging.level.org.springframework.web=debug
+#logging.level.org.hibernate=error
+logging.config=classpath:logback-spring.xml
