--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,5 +1,5 @@
-pro.serverApiUrl=http://118.31.10.105:9003
-
+#pro.serverApiUrl=http://192.168.50.11:8080
+pro.serverApiUrl=http://prod.insurance.malgo.cn
 
 spring.datasource.url=jdbc:mysql://rm-bp1it0w59f9n2hquj5o.mysql.rds.aliyuncs.com:3306/annotation_test?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=annotation_test
