--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <java.version>1.8</java.version>
         <spring-cloud.version>Finchley.M8</spring-cloud.version>
         <malgo.base-definition.version>2.1.0-SNAPSHOT</malgo.base-definition.version>
+        <malgo.common-utils.version>2.1.0-SNAPSHOT</malgo.common-utils.version>
         <docker.image.prefix>registry.cn-hangzhou.aliyuncs.com/malgo</docker.image.prefix>
     </properties>
 
@@ -31,6 +32,12 @@
             <groupId>cn.malgo.core</groupId>
             <artifactId>base-definition</artifactId>
             <version>${malgo.base-definition.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.malgo.common</groupId>
+            <artifactId>common-utils</artifactId>
+            <version>${malgo.common-utils.version}</version>
         </dependency>
 
         <dependency>
