fix: fix batch size when batch searching for fixederrorlogs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 #logging.level.org.springframework.web=debug
 #logging.level.org.hibernate=error
 logging.config=classpath:log4j2.xml
+
+malgo.annotation.fix-log-batch-size=500
