--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,7 +1,7 @@
 #pro.serverApiUrl=http://192.168.50.11:8080
 pro.serverApiUrl=http://prod.insurance.malgo.cn
 
-spring.datasource.url=jdbc:mysql://rm-bp1it0w59f9n2hquj5o.mysql.rds.aliyuncs.com:3306/annotation_test?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://rm-bp1it0w59f9n2hquj5o.mysql.rds.aliyuncs.com:3306/annotation_test?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=annotation_test
 spring.datasource.password=2lOROrFdt96aSzNt
 
