--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,4 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 logging.config=classpath:log4j2.xml
 
 malgo.annotation.fix-log-batch-size=500
+malgo.internal.secret-key=6Ha70Le63wyG2C14j2vMBpMi9qAHxT
