feat 新增标注数据暂存功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 server.port=9001
 spring.jpa.generate-ddl=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
