--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,18 +1,9 @@
-pro.serverApiUrl=http://192.168.50.12:8080
-#pro.serverApiUrl=http://prod.insurance.malgo.cn
-#
-#spring.datasource.url=jdbc:mysql://rm-bp1it0w59f9n2hquj5o.mysql.rds.aliyuncs.com:3306/annotation_test?useUnicode=true&characterEncoding=utf8&useSSL=false
-#spring.datasource.username=annotation_test
-#spring.datasource.password=2lOROrFdt96aSzNt
-
-
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://rm-bp1it0w59f9n2hquj5o.mysql.rds.aliyuncs.com:3306/annotation_build?useUnicode=true&characterEncoding=utf8
-spring.datasource.username=annotation_build
-spring.datasource.password=2y5zO037f8QLuVzD
-#pro.serverApiUrl=http://172.16.209.197/annotation-word-pos-api/
-
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.show_sql=true
-#spring.jpa.properties.hibernate.use_sql_comments=true
-#spring.jpa.properties.hibernate.format_sql=true
+pro.serverApiUrl=http://prod.insurance.malgo.cn
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
