--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -7,3 +7,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.hbm2ddl.auto=create-only
+#spring.jpa.properties.hibernate.type=trace
+#logging.level.org.hibernate=TRACE
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type=TRACE
