feat 添加doc详情接口

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -4,9 +4,9 @@ spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
+#spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.hbm2ddl.auto=create-only
 #spring.jpa.properties.hibernate.type=trace
 #logging.level.org.hibernate=TRACE
