--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,4 @@ logging.config=classpath:log4j2.xml
 
 malgo.annotation.fix-log-batch-size=500
 malgo.internal.secret-key=6Ha70Le63wyG2C14j2vMBpMi9qAHxT
-malgo.config.fastjson.pretty=false
+malgo.config.fastjson.pretty=true
