--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,7 @@ maven-build:
   only:
     - develop
     - master
+    - feature/v2.1
 
 docker-build:
   stage: build
@@ -59,6 +60,7 @@ docker-build:
   only:
     - develop
     - master
+    - feature/v2.1
 
 deploy-test:
   stage: deploy_test
@@ -69,6 +71,7 @@ deploy-test:
   only:
     - develop
     - master
+    - feature/v2.1
   variables:
     GIT_STRATEGY: none
     BIND_IP: 172.16.209.199
@@ -82,6 +85,7 @@ deploy-prod:
   when: manual
   only:
     - master
+    - feature/v2.1
   variables:
     GIT_STRATEGY: none
     BIND_IP: 172.16.209.198
