--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ malgo.annotation.fix-log-batch-size=500
 malgo.internal.secret-key=6Ha70Le63wyG2C14j2vMBpMi9qAHxT
 malgo.config.fastjson.pretty=true
 malgo.dev.default-user=0
+
+mybatis.mapper-locations=classpath:mapper/*.xml
+logging.level.cn.malgo.annotation.mapper=debug
