--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
     <malgo.base-definition.version>2.1.0-SNAPSHOT</malgo.base-definition.version>
     <malgo.common-utils.version>2.1.0-SNAPSHOT</malgo.common-utils.version>
     <docker.image.prefix>registry.cn-hangzhou.aliyuncs.com/malgo</docker.image.prefix>
+    <pageHelper-autoconfigure.version>1.2.5</pageHelper-autoconfigure.version>
+    <pageHelper.version>5.1.4</pageHelper.version>
   </properties>
 
   <dependencies>
@@ -65,6 +67,23 @@
       <groupId>org.mybatis.spring.boot</groupId>
       <artifactId>mybatis-spring-boot-starter</artifactId>
       <version>1.3.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-cache</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper-spring-boot-autoconfigure</artifactId>
+      <version>${pageHelper-autoconfigure.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper</artifactId>
+      <version>${pageHelper.version}</version>
     </dependency>
 
     <dependency>
