chore: add -U to gitlab maven options

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ variables:
   REPO_NAME: annotation-service
   PULL_REPO: registry-vpc.cn-hangzhou.aliyuncs.com/malgo/$REPO_NAME:$CI_COMMIT_SHA
   PUSH_REPO: $REGISTRY_SERVER/malgo/$REPO_NAME:$CI_COMMIT_SHA
-  MAVEN_CLI_OPTS: "-s /gitlab/.m2/settings.xml --batch-mode"
+  MAVEN_CLI_OPTS: "-s /gitlab/.m2/settings.xml --batch-mode -U"
   MAVEN_OPTS: "-Dmaven.repo.local=/gitlab/.m2/repository"
 
 maven-build:
