--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9001
 spring.jpa.generate-ddl=true
 
 #熔断保护
-feign.hystrix.enabled=true
+#feign.hystrix.enabled=true
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
 
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -18,4 +18,8 @@ logging.config=classpath:log4j2.xml
 malgo.annotation.fix-log-batch-size=500
 malgo.internal.secret-key=6Ha70Le63wyG2C14j2vMBpMi9qAHxT
 malgo.config.fastjson.pretty=false
+malgo.config.ner-update-batch-size=10
+malgo.config.ner-update-parallel-number=5
+# 每周六1点
+malgo.config.ner-update-cron=0 0 1 * * SAT
 malgo.dev.default-user=0
