--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,5 @@ malgo.config.ner-update-batch-size=10
 malgo.config.ner-update-parallel-number=5
 # 每周六1点
 malgo.config.ner-update-cron=0 0 1 * * SAT
+malgo.config.block-rate-update-cron=0 0 0 * * ?
 malgo.dev.default-user=0
