--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
       <version>1.4.197</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-text</artifactId>
+      <version>1.1</version>
+    </dependency>
   </dependencies>
 
   <dependencyManagement>
