chore: 修改prod部署机器和内存

--- a/APP-META/Dockerfile
+++ b/APP-META/Dockerfile
@@ -11,7 +11,7 @@ ENV APP_NAME annotation-service
 ARG STAGE
 ENV STAGE ${STAGE:-prod}
 
-ENV JAVA_OPTS "-server -Xmx768m -Xms384m -Xmn128m -Xss256k -XX:+DisableExplicitGC  -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 -Duser.timezone=GMT+8 -Djava.security.egd=file:/dev/./urandom"
+ENV JAVA_OPTS "-server -Xms384m -Xmn128m -Xss256k -XX:+DisableExplicitGC  -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 -Duser.timezone=GMT+8 -Djava.security.egd=file:/dev/./urandom"
 
 ARG JAR_FILE
 ADD target/${JAR_FILE} /usr/src/app/${APP_NAME}.jar
