--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@
     - ssh -p22 root@$CI_ENVIRONMENT_URL "docker pull $PULL_REPO"
     - ssh -p22 root@$CI_ENVIRONMENT_URL "docker stop $REPO_NAME-$CI_ENVIRONMENT_NAME || true"
     - ssh -p22 root@$CI_ENVIRONMENT_URL "docker rm -f $REPO_NAME-$CI_ENVIRONMENT_NAME || true"
-    - ssh -p22 root@$CI_ENVIRONMENT_URL "docker run -d --restart=always -p $BIND_IP:9001:9001 --name $REPO_NAME-$CI_ENVIRONMENT_NAME -m 768m --log-driver=syslog -v /root/$REPO_NAME-$CI_ENVIRONMENT_NAME/log4j2-spring.xml:/usr/src/app/log4j2-spring.xml -v /root/$REPO_NAME-$CI_ENVIRONMENT_NAME/logs:/usr/src/logs -v /root/$REPO_NAME-$CI_ENVIRONMENT_NAME/application-prod.properties:/usr/src/app/application-prod.properties $PULL_REPO"
+    - ssh -p22 root@$CI_ENVIRONMENT_URL "docker run -d --restart=always -p $BIND_ADDRESS:9001 --name $REPO_NAME-$CI_ENVIRONMENT_NAME -m $MAX_MEMORY --env=MAX_MEMORY=$MAX_MEMORY --log-driver=syslog -v /root/$REPO_NAME-$CI_ENVIRONMENT_NAME/log4j2-spring.xml:/usr/src/app/log4j2-spring.xml -v /root/$REPO_NAME-$CI_ENVIRONMENT_NAME/logs:/usr/src/logs -v /root/$REPO_NAME-$CI_ENVIRONMENT_NAME/application-prod.properties:/usr/src/app/application-prod.properties $PULL_REPO"
 
 stages:
   - package
@@ -71,7 +71,8 @@ deploy-test:
     - master
   variables:
     GIT_STRATEGY: none
-    BIND_IP: 172.16.209.199
+    BIND_ADDRESS: 172.16.209.199:9001
+    MAX_MEMORY: 768m
   <<: *deploy_definition
 
 deploy-prod:
@@ -80,12 +81,13 @@ deploy-prod:
     - deploy
   environment:
     name: prod
-    url: 47.96.0.236
+    url: 118.31.10.105
   when: manual
   only:
     - develop
     - master
   variables:
     GIT_STRATEGY: none
-    BIND_IP: 172.16.209.198
+    BIND_ADDRESS: 172.16.209.197:9002
+    MAX_MEMORY: 1024m
   <<: *deploy_definition
