--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.profiles.active=dev
 server.port=9001
 spring.jpa.generate-ddl=true
 
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+server.servlet.session.timeout=30d
+
 #熔断保护
 #feign.hystrix.enabled=true
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
