[feat] spring-cloud

--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,8 @@
     <docker.image.prefix>registry.cn-hangzhou.aliyuncs.com/malgo</docker.image.prefix>
     <pageHelper-autoconfigure.version>1.2.5</pageHelper-autoconfigure.version>
     <pageHelper.version>5.1.4</pageHelper.version>
-    <auth-common.version>0.0.7-SNAPSHOT</auth-common.version>
     <spring-cloud.version>Finchley.SR1</spring-cloud.version>
+    <auth-common.version>0.0.7-SNAPSHOT</auth-common.version>
   </properties>
 
   <dependencies>
@@ -109,10 +109,10 @@
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-openfeign</artifactId>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.springframework.cloud</groupId>-->
+      <!--<artifactId>spring-cloud-starter-openfeign</artifactId>-->
+    <!--</dependency>-->
 
   </dependencies>
 
@@ -127,4 +127,5 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+
 </project>
