--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,20 @@
 spring.profiles.active=dev
-server.port=9001
+server.port=9004
 spring.jpa.generate-ddl=true
-
-spring.session.store-type=jdbc
-spring.session.jdbc.initialize-schema=always
-server.servlet.session.timeout=30d
+#spring.session.store-type=jdbc
+#spring.session.jdbc.initialize-schema=always
+#server.servlet.session.timeout=30d
 
 #熔断保护
 #feign.hystrix.enabled=true
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
-
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-
 #logging.file=annotation-combine.log
 #logging.level.org.springframework.web=debug
 #logging.level.org.hibernate=error
 logging.config=classpath:log4j2.xml
-
 malgo.annotation.fix-log-batch-size=500
 malgo.internal.secret-key=6Ha70Le63wyG2C14j2vMBpMi9qAHxT
 malgo.config.fastjson.pretty=false
@@ -33,4 +29,6 @@ malgo.config.precision-recall-rate-cron=0/20 * * * * ?
 malgo.config.personal-word-num-cron=0 0/20 * * * ?
 malgo.config.task-summary-cron=0 0/20 * * * ?
 malgo.config.staff-evaluate-cron=0 0/20 * * * ?
+spring.application.name=spring-cloud-consumer
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:9001/eureka/
 
