[refact] 引入commonjar项目无法启动

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,5 @@ malgo.config.personal-word-num-cron=0 0/20 * * * ?
 malgo.config.task-summary-cron=0 0/20 * * * ?
 malgo.config.staff-evaluate-cron=0 0/20 * * * ?
 
+server.tomcat.max-threads=3
+
