[feat] 新增用户中心相关内容

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.profiles.active=dev
 server.port=9001
 spring.jpa.generate-ddl=true
-#spring.session.store-type=jdbc
-#spring.session.jdbc.initialize-schema=always
-#server.servlet.session.timeout=30d
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+server.servlet.session.timeout=30d
 
 #熔断保护
 #feign.hystrix.enabled=true
@@ -29,6 +29,4 @@ malgo.config.precision-recall-rate-cron=0/20 * * * * ?
 malgo.config.personal-word-num-cron=0 0/20 * * * ?
 malgo.config.task-summary-cron=0 0/20 * * * ?
 malgo.config.staff-evaluate-cron=0 0/20 * * * ?
-
-server.tomcat.max-threads=3
 
