[feat] 添加测试类配置文件

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,16 @@
 pro.serverApiUrl=http://prod.insurance.malgo.cn
+
+cn.malgo.auth.user.url=http://localhost:8686
+cn.malgo.auth.path=http://localhost:8686/api/user/login
+cn.malgo.auth.nickname=annotation_sys
+cn.malgo.auth.password=f379eaf3c831b04de153469d1bec345e
+
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=foobared
+
+
+
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
