--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
     </dependency>
 
     <dependency>
+        <groupId>com.hankcs</groupId>
+        <artifactId>hanlp</artifactId>
+        <version>portable-1.6.8</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-hystrix</artifactId>
       <version>1.3.1.RELEASE</version>
