[feat]http://prod.insurance.malgo.cn->http://116.62.144.95:8080

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,5 +37,6 @@ malgo.config.staff-evaluate-cron=0 0 4 * * 2008
 malgo.config.block-rate-update-cron=0 0 4 * * 2008
 malgo.config.expiration-time-cron=0 0 4 * * 2008
 
-pro.serverApiUrl=http://prod.insurance.malgo.cn
+#pro.serverApiUrl=http://prod.insurance.malgo.cn
+pro.serverApiUrl=http://116.62.144.95:8080
 
